workin on get new

--- a/views/details.hbs
+++ b/views/details.hbs
@@ -1,1 +1,10 @@
-<img src = "{{link}}">
+<h1>_ARCHITEKT</h1>
+  <div class="photoContainer">
+    <a href="/gallery/{{photo.id}}" class="photoLink-single">
+      <img src="{{photo.link}}" class="photo">
+    <br>
+    <div class="authors-descriptions">
+      {{photo.author}} -<br>{{photo.link}} 
+    </div> 
+    </a>
+  </div>
