moved details handlebar around

--- a/views/details.hbs
+++ b/views/details.hbs
@@ -2,9 +2,12 @@
   <div class="photoContainer">
     <a href="/gallery/{{photo.id}}" class="photoLink-single">
       <img src="{{photo.link}}" class="photo">
-    <br>
-    <div class="authors-descriptions">
-      {{photo.author}} -<br>{{photo.link}} 
-    </div> 
     </a>
+    <br>
+    {{photo.author}}
+    <br>
+    {{photo.link}}
+    <br>
+    {{photo.description}}
+    <br>
   </div>
