--- a/views/editForm.hbs
+++ b/views/editForm.hbs
@@ -1,13 +1,9 @@
-<div id="edit">
-  <img src="{{link}}" alt="{{description}}">
-  <form name="editPhoto" id="editPhoto" action="/gallery/{{id}}" method="POST">
-    <label for="link">Link</label>
-    <input type="text" name="link" value="{{link}}">
-    <label for="author">Author</label>
-    <input type="text" name="author" value="{{author}}">
-    <label for="description">Description</label>
-    <input type="text" name="description" value="{{description}}">
-    <input type="hidden" name="_method" value="PUT">
-    <input id= "editPhoto" type="submit" value="Save Changes">
-  </form>
-</div>
+<form name="newPhoto" id="newPhoto" action="/gallery/new" method="POST">
+  <label for="author">Author</label>
+  <input type="text" name="author">
+  <label for="link">Link</label>
+  <input type="text" name="link">
+  <label for="description">Description</label>
+  <input type="text" name="description">
+  <input id="newPhoto" type="submit" value="Submit">
+</form>
