--- a/views/newForm.hbs
+++ b/views/newForm.hbs
@@ -1,9 +1,9 @@
 <form name="newPhoto" id="newPhoto" action="/gallery/new" method="POST">
   <label for="author">Author</label>
-  <input type="text" name="author" value="">
+  <input type="text" name="author">
   <label for="link">Link</label>
-  <input type="text" name="link" value="">
+  <input type="text" name="link">
   <label for="description">Description</label>
-  <input type="text" name="description" value="">
+  <input type="text" name="description">
   <input id="newPhoto" type="submit" value="Submit">
 </form>
