install method override

--- a/views/details.hbs
+++ b/views/details.hbs
@@ -10,4 +10,6 @@
     <br>
     {{photo.description}}
     <br>
+    <button type="button" onclick="location.href='/gallery/{{photo.id}}/edit';">EDIT</button>
+    <button type="button">DELETE</button>
   </div>
