ALL ROUTES FINISHED

--- a/views/details.hbs
+++ b/views/details.hbs
@@ -11,5 +11,5 @@
     {{photo.description}}
     <br>
     <button type="button" onclick="location.href='/gallery/{{photo.id}}/edit';">EDIT</button>
-    <button type="button">DELETE</button>
+    <button type="button" onclick="location.href='/gallery/{{photo.id}}/delete';">DELETE</button>
   </div>
