--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
 <h1>_ARCHITEKT</h1>
+<input id="newPhoto" type="submit" onclick="location.href='/gallery/new';" value="NEU">
 {{#each photos}}  
   <div class="photoContainer">
     <a href="/gallery/{{id}}" class="photoLink-single">
