--- a/views/layouts/app.hbs
+++ b/views/layouts/app.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Express Gallery</title>
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/app.css">
 </head>
 <body>
   {{{body}}}
