--- a/views/newForm.hbs
+++ b/views/newForm.hbs
@@ -1,4 +1,4 @@
-<form name="newPhoto" id="newPhoto" action="/gallery/new" method="POST">
+<form name="newPhoto" id="newPhoto" action="/gallery" method="POST">
   <label for="author">Author</label>
   <input type="text" name="author">
   <label for="link">Link</label>
