--- a/views/details.hbs
+++ b/views/details.hbs
@@ -1,4 +1,4 @@
-<h1>_ARCHITEKT</h1>
+<h1><a href ="/">_ARCHITEKT</a></h1>
   <div class="photoContainer">
     <a href="/gallery/{{photo.id}}" class="photoLink-single">
       <img src="{{photo.link}}" class="photo">
