--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<h1>_ARCHITEKT</h1>
+<h1><a href ="/">_ARCHITEKT</a></h1>
 <input id="newPhoto" type="submit" onclick="location.href='/gallery/new';" value="NEU">
 {{#each photos}}  
   <div class="photoContainer">
