--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 <form action="" method = "POST">
   USERNAME: <input type = "text" name = "username">
   <br>
-  LOGIN: <input type = "text" name = "password">
+  LOGIN: <input type = "password" name = "password">
   <input type = "submit" value = "LOGIN">
 </form>
