--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,21 @@
 <h1><a href ="/">_ARCHITEKT</a></h1>
+
+<form action = "/login" method = "post">
+  <div>
+    <label>Username:</label>
+    <input type="text" name="username"/>
+  </div>
+  <div>
+    <label>Password:</label>
+    <input type="password" name="password"/>
+  </div>
+  <div>
+    <input type="submit" value="Log in"/>
+  </div>
+</form>
+<br>
 <input id="newPhoto" type="submit" onclick="location.href='/gallery/new';" value="NEU">
+<p>
 {{#each photos}}  
   <div class="photoContainer">
     <a href="/gallery/{{id}}" class="photoLink-single">
