--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-<form action="/login" method="POST">
+<form action="/register" method="POST">
     <div>
         <label>Username:</label>
         <input type="text" name="username"/>
@@ -8,6 +8,6 @@
         <input type="password" name="password"/>
     </div>
     <div>
-        <input type="submit" value="Log In"/>
+        <input type="submit" value="Register"/>
     </div>
 </form>
