--- a/views/details.hbs
+++ b/views/details.hbs
@@ -1,15 +1,19 @@
-<h1><a href ="/">_ARCHITEKT</a></h1>
-  <div class="photoContainer">
-    <a href="/gallery/{{photo.id}}" class="photoLink-single">
-      <img src="{{photo.link}}" class="photo">
-    </a>
-    <br>
-    {{photo.author}}
-    <br>
-    {{photo.link}}
-    <br>
-    {{photo.description}}
-    <br>
-    <button type="button" onclick="location.href='/gallery/{{photo.id}}/edit';">EDIT</button>
-    <button type="button" onclick="location.href='/gallery/{{photo.id}}/delete';">DELETE</button>
-  </div>
+<h1>
+  <a href ="/">_ARCHITEKT</a>
+</h1>
+<div class="photoContainer">
+  <a href="/gallery/{{photo.id}}" class="photoLink-single">
+    <img src="{{photo.link}}" class="photo">
+  </a>
+  <br>
+  {{photo.author}}
+  <br>
+  {{photo.link}}
+  <br>
+  {{photo.description}}
+  <br>
+  {{#if loggedIn}}
+  <button type="button" onclick="location.href='/gallery/{{photo.id}}/edit';">EDIT</button>
+  <button type="button" onclick="location.href='/gallery/{{photo.id}}/delete';">DELETE</button>
+  {{/if}}
+</div>
